[gd_scene load_steps=2 format=3 uid="uid://q3yhgyfufku1"]

[ext_resource type="Script" path="res://addons/vha4gd/src/scripts/dialog.gd" id="1_u4l64"]

[node name="Dialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u4l64")

[node name="DownloadCompleted" type="Window" parent="."]
title = "完了"
size = Vector2i(179, 100)
visible = false
wrap_controls = true

[node name="Label" type="Label" parent="DownloadCompleted"]
offset_right = 40.0
offset_bottom = 23.0
text = "ダウンロードが完了しました。
ゲームを再起動してください。"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AccessTokenError" type="AcceptDialog" parent="."]
title = "トークン期限切れ"
size = Vector2i(300, 132)
dialog_text = "アクセストークンの有効期限が切れているため
認証画面へ戻ります。
再度開始ボタンを押してください。"
dialog_close_on_escape = false

[node name="NoVRMPlugin" type="AcceptDialog" parent="."]
title = "Plugin Not Found!"
size = Vector2i(297, 100)
dialog_text = "VRMプラグインがインストールされていません。"
dialog_close_on_escape = false

[connection signal="confirmed" from="AccessTokenError" to="." method="_on_access_token_error_confirmed"]
[connection signal="confirmed" from="NoVRMPlugin" to="." method="_on_no_vrm_plugin_confirmed"]
